--- a/Kosplay/Kosplay.API/appsettings.Development.json
+++ b/Kosplay/Kosplay.API/appsettings.Development.json
@@ -6,6 +6,13 @@
         },
         "ConnectionStrings": {
             "ConnectionDefault": "Server=(localdb)\\mssqllocaldb;Database=ProjectBaseApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+        },
+        "Jwt": {
+            "ValidAudience": "http://localhost:7043",
+            "ValidIssuer": "http://localhost:5043",
+            "SecretKey": "Minha@Super#Secreta&Chave*Privada!2022",
+            "TokenValidityInMinutes": 30,
+            "RefreshTokenValidityInMinutes": 60
         }
     }
 }
