feat: criando um novo usuário pela chamada do endpoint.

--- a/Kosplay/Kosplay.API/appsettings.json
+++ b/Kosplay/Kosplay.API/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "ConnectionDefault": "Server=(localdb)\\mssqllocaldb;Database=ProjectBaseApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "ConnectionDefault": "Server=localhost\\SQLEXPRESS;Database=Kosplay;User Id=sa;Password=Esoj1214-;TrustServerCertificate=True;"
     }
 }
