--- a/Kosplay/Kosplay.API/appsettings.Development.json
+++ b/Kosplay/Kosplay.API/appsettings.Development.json
@@ -3,16 +3,16 @@
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
-        },
-        "ConnectionStrings": {
-            "ConnectionDefault": "Server=(localdb)\\mssqllocaldb;Database=ProjectBaseApi;Trusted_Connection=True;MultipleActiveResultSets=true"
-        },
-        "Jwt": {
-            "ValidAudience": "http://localhost:7043",
-            "ValidIssuer": "http://localhost:5043",
-            "SecretKey": "Minha@Super#Secreta&Chave*Privada!2022",
-            "TokenValidityInMinutes": 30,
-            "RefreshTokenValidityInMinutes": 60
         }
+    },
+    "ConnectionStrings": {
+        "ConnectionDefault": "Server=localhost\\SQLEXPRESS;Database=Kosplay;User Id=sa;Password=Esoj1214-;TrustServerCertificate=True;"
+    },
+    "JWT": {
+        "ValidAudience": "http://localhost:7043",
+        "ValidIssuer": "http://localhost:5043",
+        "SecretKey": "Minha@Super#Secreta&Chave*Privada!2022",
+        "TokenValidityInMinutes": 30,
+        "RefreshTokenValidityInMinutes": 60
     }
 }
