feat: integração com Image kit para armazenar imagens dos produtos.

--- a/Kosplay/Kosplay.API/appsettings.Development.json
+++ b/Kosplay/Kosplay.API/appsettings.Development.json
@@ -14,5 +14,11 @@
         "SecretKey": "Minha@Super#Secreta&Chave*Privada!2022",
         "TokenValidityInMinutes": 30,
         "RefreshTokenValidityInMinutes": 60
+    },
+    "ImageKit": {
+        "Url": "https://upload.imagekit.io",
+        "PublicKey": "public_SusJ1E6taqUMMdxP+AhitH7XiMA=",
+        "PrivateKey": "private_Fqy1BgWPArWiCcB2K8ExBeLsOTs=",
+        "Folder": "kosplay"
     }
 }
