--- a/Kosplay/Kosplay.Infra/Kosplay.Infra.csproj
+++ b/Kosplay/Kosplay.Infra/Kosplay.Infra.csproj
@@ -11,6 +11,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Imagekit" Version="5.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.2" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
